--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
   <div id="wrapper">
-    <div class="container text-center" style="display: flex;">
-      <div class="mx-auto" style="display: flex;">
+    <div class="container text-center d-flex">
+      <div class="mx-auto d-flex">
         <span class="my-auto" id="leftArrow"> <i class="fas fa-angle-left fa-fw arrow"></i></span>
         <div id="main_content" class="card mx-3 p-5">
           <blockquote class="blockquote">
